--- a/appinventor/components/build.xml
+++ b/appinventor/components/build.xml
@@ -149,6 +149,7 @@
         <pathelement location="${lib.dir}/oauth/google-oauth-client-1.10.1-beta.jar" />
         <pathelement location="${lib.dir}/gson/gson-2.1.jar" />
         <pathelement location="${lib.dir}/json/json.jar" />
+        <pathelement location="${lib.dir}/stemi/hexapod-java.jar" />
       </classpath>
     </ai.javac5>
 
@@ -256,6 +257,7 @@
           <pathelement location="${lib.dir}/oauth/google-http-client-android3-1.10.3-beta.jar" />
           <pathelement location="${lib.dir}/oauth/google-oauth-client-1.10.1-beta.jar" />
           <pathelement location="${lib.dir}/guava/guava-14.0.1.jar" />
+	  <pathelement location="${lib.dir}/stemi/hexapod-java.jar" />
         </classpath>
         <compilerarg line="-processorpath ${local.build.dir}/AnnotationProcessors.jar"/>
         <compilerarg line="-processor @{apt-processor}" />
